--- a/react-prjt-1/src/components/Navbar/Navbar.module.css
+++ b/react-prjt-1/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,17 @@
 .nav {
     grid-area: n;
-    background-color: rgb(0, 58, 216);
+    background-color: rgba(216, 79, 0, 0.479);
+    padding: 20px;
 }
 
 .item {
     color: rgb(255, 255, 255);
+    text-decoration: none;
+    }
+
+    
+.active {
+    color: gold;
+    text-decoration: none;
+
     }
