--- a/react-prjt-1/src/components/Navbar/Navbar.module.css
+++ b/react-prjt-1/src/components/Navbar/Navbar.module.css
@@ -15,3 +15,12 @@
     text-decoration: none;
 
     }
+
+.navbarFriends {
+        display: flex;
+        
+    }
+
+.avaName img {
+    border-radius: 25px;
+}
